# bimbmaan

./: README.md  pyproject.toml
bimbmaan/: __init__.py  __metadata__.py  base.py  cmd.py  manager.py
bimbmaan/helper/: image.py  pptx.py
